fix for experts banner too wide

--- a/src/sass/components/_business-card.scss
+++ b/src/sass/components/_business-card.scss
@@ -20,6 +20,9 @@ $businessCardPhotoSize: 65px;
     border-radius: $businessCardPhotoSize / 2;
     overflow: hidden;
     margin-right: 15px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 
     &.no-photos {
       background-color: $primary-lighter;
